# ionclaw-forked

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  build-msys2.sh
.github/workflows/: build-android.yml
apps/apple/: project.yml
apps/apple/Shared/CIonClaw/: module.modulemap
apps/apple/Shared/Resources/Assets.xcassets/Logo.imageset/: Contents.json
apps/apple/Shared/Sources/Model/: AppConfig.swift
apps/apple/Shared/Sources/Network/: ChatClient.swift  MessageSender.swift  NetworkInterfaces.swift
apps/apple/Shared/Sources/Server/: IonClawRuntime.swift  ServerController.swift
apps/apple/Shared/Sources/Theme/: Theme.swift
apps/apple/Shared/Sources/UI/: QRCode.swift  QRCodeView.swift  ServerStatusView.swift
apps/apple/iOS/Resources/: Info.plist  LaunchScreen.storyboard
apps/apple/iOS/Resources/Assets.xcassets/AppIcon.appiconset/: Contents.json
apps/apple/iOS/Sources/: IonClawApp.swift  PanelView.swift  ServerView.swift
apps/apple/tvOS/Resources/: Info.plist
apps/apple/tvOS/Resources/Assets.xcassets/App Icon & Top Shelf Image.brandassets/App Icon - App Store.imagestack/: Contents.json
apps/apple/tvOS/Resources/Assets.xcassets/App Icon & Top Shelf Image.brandassets/App Icon - App Store.imagestack/Back.imagestacklayer/Content.imageset/: Contents.json
apps/apple/tvOS/Resources/Assets.xcassets/App Icon & Top Shelf Image.brandassets/App Icon - App Store.imagestack/Front.imagestacklayer/Content.imageset/: Contents.json
apps/apple/tvOS/Resources/Assets.xcassets/App Icon & Top Shelf Image.brandassets/App Icon.imagestack/Back.imagestacklayer/Content.imageset/: Contents.json
apps/apple/tvOS/Resources/Assets.xcassets/App Icon & Top Shelf Image.brandassets/App Icon.imagestack/Front.imagestacklayer/Content.imageset/: Contents.json
apps/apple/tvOS/Resources/Assets.xcassets/App Icon & Top Shelf Image.brandassets/Top Shelf Image Wide.imageset/: Contents.json
apps/apple/tvOS/Resources/Assets.xcassets/App Icon & Top Shelf Image.brandassets/Top Shelf Image.imageset/: Contents.json
apps/apple/tvOS/Sources/: FilledActionButtonStyle.swift  InteractView.swift  ServerView.swift
apps/apple/watchOS/Resources/: Info.plist
apps/apple/watchOS/Resources/Assets.xcassets/AppIcon.appiconset/: Contents.json
apps/apple/watchOS/Sources/: InteractView.swift  ServerView.swift
apps/flutter/plugin/: pubspec.yaml
apps/flutter/plugin/android/: build.gradle
apps/flutter/runner/: pubspec.yaml
apps/web/public/: sw.js
cmake/: toolchain-msys2.cmake
cmake/cpm/: cpm-dependency.cmake  cpm-dependency.cmake.bak  openssl.cmake  system-libs-msys2.cmake
docs/: about.md  apple.md  build.md  custom-providers.md  installation.md  llama.md  screenshots.md
main/: CMakeLists.txt
main/lib/include/ionclaw/provider/: LlamaProvider.hpp
main/lib/include/ionclaw/tool/builtin/: JsonToTableTool.hpp  QrCodeTool.hpp
main/lib/include/ionclaw/util/: Platform.hpp  ProcessRunner.hpp
main/lib/src/ionclaw/agent/: ContextWindow.cpp
main/lib/src/ionclaw/config/: Config.cpp  ConfigLoader.cpp
main/lib/src/ionclaw/provider/: LlamaProvider.cpp  ProviderFactory.cpp
main/lib/src/ionclaw/tool/: ToolRegistry.cpp
main/lib/src/ionclaw/tool/builtin/: BrowserTool.cpp  JsonToTableTool.cpp  QrCodeTool.cpp
main/lib/src/ionclaw/util/: ProcessRunner.cpp
main/resources/skills/qrcode/: SKILL.md
main/resources/template/: config.yml
